--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -42,11 +42,11 @@
 
     <ImageButton
         android:id="@+id/btnProfile"
-        android:layout_width="229dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="180dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/profile"
         android:contentDescription="@string/dark_mode"
         android:gravity="center_horizontal|center"
@@ -56,11 +56,11 @@
 
     <Button
         android:id="@+id/btnCategories"
-        android:layout_width="297dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="215dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/categoriesmenu"
         android:onClick="openCategories"
         app:layout_constraintBottom_toTopOf="@+id/btnOptions"
@@ -68,11 +68,11 @@
 
     <ImageButton
         android:id="@+id/btnOptions"
-        android:layout_width="233dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="180dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/settings"
         android:contentDescription="@string/dark_mode"
         android:gravity="center_horizontal|center"
@@ -82,22 +82,23 @@
 
     <Button
         android:id="@+id/btnHelp"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="100dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/help"
+        android:onClick="openHelp"
         app:layout_constraintBottom_toTopOf="@+id/btnQuitGame"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/btnQuitGame"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="100dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/quit"
         android:contentDescription="@string/dark_mode"
         android:gravity="center_horizontal|center"
@@ -125,8 +126,8 @@
 
     <ImageButton
         android:id="@+id/btnStartGame"
-        android:layout_width="217dp"
-        android:layout_height="67dp"
+        android:layout_width="178dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
