--- a/app/src/main/res/layout/activity_display_options.xml
+++ b/app/src/main/res/layout/activity_display_options.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="#000000"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center">
+
 
     <TextView
         android:id="@+id/txtOptions"
