--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,18 +13,20 @@
         android:id="@+id/txtHighScoreLabel"
         android:layout_width="158dp"
         android:layout_height="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="2dp"
         android:background="@drawable/highscore"
         android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/txtHighScore"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtHighScore"
-        android:layout_width="39dp"
+        android:layout_width="46dp"
         android:layout_height="25dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:gravity="start"
         android:text="@string/zero"
         android:textColor="@android:color/holo_blue_dark"
@@ -36,24 +38,26 @@
         android:id="@+id/txtCurrentScoreLabel"
         android:layout_width="94dp"
         android:layout_height="30dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
         android:layout_marginTop="2dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/score"
         android:textColor="@color/colorAccent"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/txtHighScore"
+        app:layout_constraintEnd_toStartOf="@+id/txtCurrentScore"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtCurrentScore"
         android:layout_width="54dp"
         android:layout_height="25dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:gravity="start"
         android:text="@string/zero"
         android:textColor="@android:color/holo_orange_light"
         android:textSize="22sp"
-        app:layout_constraintStart_toEndOf="@+id/txtCurrentScoreLabel"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
