--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".GUI.Game"
+    tools:context=".View.Game"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
